--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <canvas id="canavs">
         </canvas>
         <div class="tools"><!-- for the buttons and colors chnaging -->
-            <button type="button" class="ntn">Undo</button>
-            <button type="button" class="ntn">clear</button>
-            <div class="color" style="background-color: red;"></div>
-            <div class="color" style="background-color: blue;"></div>
-            <div class="color" style="background-color: blueviolet;"></div>
-            <div class="color" style="background-color: brown;"></div>
-            <div class="color" style="background-color: yellow;"></div>
-            <div class="color" style="background-color: olive;"></div>
-            <div class="color" style="background-color: green;"></div>
-            <div class="color" style="background-color: gray;"></div>
+            <button type="button" class="btn">Undo</button>
+            <button type="button" class="btn">clear</button>
+            <div class="color-fild" style="background-color: red;"></div>
+            <div class="color-fild" style="background-color: blue;"></div>
+            <div class="color-fild "style="background-color: blueviolet;"></div>
+            <div class="color-fild" style="background-color: brown;"></div>
+            <div class="color-fild" style="background-color: yellow;"></div>
+            <div class="color-fild" style="background-color: olive;"></div>
+            <div class="color-fild"style="background-color: green;"></div>
+            <div class="color-fild" style="background-color: gray;"></div>
             <input type="color" class="colorBiker">
-            <input type="range" min="1" max="100">
+            <input type="range" min="1" max="20" class="pen-rage">
         </div> 
     </div>
 </body>
