drowing on canava

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
             <input type="range" min="1" max="20" class="pen-rage">
         </div> 
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
