change drow color

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="tools"><!-- for the buttons and colors chnaging -->
             <button type="button" class="btn">Undo</button>
             <button type="button" class="btn">clear</button>
-            <div class="color-fild" style="background-color: red;"></div>
-            <div class="color-fild" style="background-color: blue;"></div>
-            <div class="color-fild "style="background-color: blueviolet;"></div>
-            <div class="color-fild" style="background-color: brown;"></div>
-            <div class="color-fild" style="background-color: yellow;"></div>
-            <div class="color-fild" style="background-color: olive;"></div>
-            <div class="color-fild"style="background-color: green;"></div>
+            <div onclick="changColor(this)" class="color-fild" style="background-color: red;"></div>
+            <div  onclick="changColor(this)" class="color-fild" style="background-color: blue;"></div>
+            <div  onclick="changColor(this)" class="color-fild "style="background-color: blueviolet;"></div>
+            <div  onclick="changColor(this)" class="color-fild" style="background-color: brown;"></div>
+            <div  onclick="changColor(this)" class="color-fild" style="background-color: yellow;"></div>
+            <div  onclick="changColor(this)" class="color-fild" style="background-color: olive;"></div>
+            <div  onclick="changColor(this)" class="color-fild"style="background-color: green;"></div>
             <div class="color-fild" style="background-color: gray;"></div>
-            <input type="color" class="colorBiker">
+            <input oninput="drawColor=this.value" type="color" class="colorBiker">
             <input type="range" min="1" max="20" class="pen-rage">
         </div> 
     </div>
